# poker-cli

./: .gitignore  README.md  TODO.md  agent_manager.py  cli_api_client.py  custom_agents.py  debug_game_config.py  display.py  fastapi_backend_proposal.md  game_engine.py  hand_evaluator.py  human_player.py  llm_agents.py  llm_client.py  main.py  notes.md  prompt_builder.py  pyproject.toml
backend/: README.md  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  agents.py  games.py
backend/app/services/: __init__.py  game_manager.py
frontend/: bun.lockb  next.config.ts  package.json
frontend/app/: page.tsx
frontend/app/game/[gameId]/: page.tsx
frontend/components/game/: action-buttons.tsx  card-display.tsx  game-board.tsx  player-status.tsx
frontend/hooks/: use-game-state.ts  use-websocket.ts
frontend/types/: game.ts
holdem_docs/: agents.md  card.md  core.md  custom_agents.md  eval.md  game.md  game_history.md  home.md  text_ui.md  ui.md
holdem_docs/api/: api_ref.md  card_and_deck.md  game_history.md  holdem.md
tests/: debug_llm_agents.py  debug_test.py  test_game_flow.py  test_llm.py  test_poker_mechanics.py
